adding a responsive navigation top bar

--- a/Ingxash'_Clothing_Apparel/homeview/homeview.html
+++ b/Ingxash'_Clothing_Apparel/homeview/homeview.html
@@ -11,20 +11,34 @@
     <title>Ingxash'</title>
 </head>
 <body>
-    <nav id="main-menu">
-        <ul class="left-nav-links">
-            <li><a href="#">SEARCH</a></li>
-        </ul>
-        <div class="logo-area">
-            <li><a href="#">HOME</a></li>
-            <img src="/images/ingxash_Logo.jpg"/>
-            <li><a href="#">SHOP</a></li>
+    <div id="navigation">
+        <div class="container">
+            <nav class="nav-bar">
+                <div class="logo-area">                
+                    <a href="#">
+                        <img src="/images/ingxash_Logo.jpg" alt="Logo">
+                    </a>
+                    <span class="burger-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </span>           
+                </div>
+                
+                <div class="main-menu">
+                    <ul class="nav-links">
+                        <li><a href="#">SEARCH</a></li>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">SHOP</a></li>
+                        <li><a href="#">PROFILE</a></li>
+                        <li><a href="#">CART</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-        <ul class="right-nav-links">
-            <li><a href="#">PROFILE</a></li>
-            <li><a href="#">CART</a></li>
-        </ul>
-    </nav>
-    
+    </div>
+    <script 
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min">
+    </script>
 </body>
 </html>
