--- a/Ingxash'_Clothing_Apparel/homeview/homeview.html
+++ b/Ingxash'_Clothing_Apparel/homeview/homeview.html
@@ -11,7 +11,8 @@
     <title>Ingxash'</title>
 </head>
 <body>
-    <div id="navigation">
+<!----------------- Navigation-Top-Bar---------------------------------->
+<div id="navigation">
         <div class="container">
             <nav class="nav-bar">
                 <div class="logo-area">                
@@ -24,7 +25,7 @@
                         <span></span>
                     </span>           
                 </div>
-                
+                    
                 <div class="main-menu">
                     <ul class="nav-links">
                         <li><a href="#">SEARCH</a></li>
@@ -37,8 +38,81 @@
             </nav>
         </div>
     </div>
-    <script 
-        src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min">
-    </script>
+<!--------------------- Hero-Section ------------------------------------>
+    <div id="hero-section">
+        <div class="sliders fade" style="display: block";>
+            <div class="txt">
+                <h1>BUCKET HAT</h1>
+                <p>Ingxash Bucket Hat gives you that Kasi feel,
+                    <br>the one you want to "UKUBANGENA" when wearing it!!!</p>
+            </div>
+            <div class="bucket-hat" style="width: 100%; height: 100%">
+                <a href="#">
+                <img src="../images/ingxash_bucket_hat.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="sliders fade">
+            <div class="txt">
+                <h1>SNEAKER</h1>
+                <p>Ingxash fuses the iconic Cape Town Kasi vibe,
+                    <br>retro style and trends to create a great pair of sneakers</p>
+            </div>
+            <div class="sneakers" style="width: 100%; height: 100%">
+                <a href="#">
+                <img src="../images/Ingxash footwear.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="sliders fade">
+            <div class="txt">
+                <h1>GOLF T-SHIRT</h1>
+                <p>Ingxash Golf T-Shirt is light,
+                    <br>breathable and bit stretchy.
+                    <br>They'll keep you confortable throughout the day.</p>
+            </div>
+            <div class="golf-t-shirt" style="width: 100%; height: 100%">
+                <a href="#">
+                <img src="../images/ingxash_infinity_g_tees.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="sliders fade">
+            <div class="txt">
+                <h1>BOMBA JACKET</h1>
+                <p>Ingxash Bucket Hat gives you that Kasi feel,
+                    <br>the one you want to "UKUBANGENA" when wearing it!!!</p>
+            </div>
+            <div class="bomba-jacket" style="width: 100%; height: 100%">
+                <a href="#">
+                <img src="../images/Bomba_jacket.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="sliders fade">
+            <div class="txt">
+                <h1>BEDDING</h1>
+                <p>You wanna sleep like a baby?!!!
+                    <br>Say no more</p>
+            </div>
+            <div class="bedding" style="width: 100%; height: 100%">
+                <a href="#">
+                <img src="../images/Ingxash_bedding.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="prev-and-next-buttons">
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="nxt" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <div class="dotsbox">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+        </div>
+    </div>
+<script src="homeview.js"></script>
 </body>
 </html>
